# findme

./: Cargo.toml  basic_comment.json  basic_postin.json  todo.md
backend/: Cargo.toml  basic_postin.json
backend/src/: endpoints.rs  main.rs
backend/src/data/: db.rs
findme-frontend/: package-lock.json  package.json
findme-frontend/src/: fetch.ts  index.css  main.tsx  utils.ts
findme-frontend/src/components/: header.module.css  header.tsx
findme-frontend/src/pages/: app.module.css  app.tsx  post.tsx  report.module.css  report.tsx
src/: endpoints.rs  main.rs
src/data/: db.rs  mod.rs
