[package]
name = "findme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#diesel_cli = { version = "2.1.1", default-features = false, features = ["postgres"] }
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "json"] }
serde = "1.0.188"
geoutils = "0.5.1"